# Remote-Monitoring-System-Based-On-RaspberryPi

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile~  RemoteMonit  SMSsending.c  SMSsending.h  cmake_install.cmake  config.ini  detect.cpp  detect.h  face_only_rpi.cpp  http_work.c  http_work.h  index.html  log.txt  main.c  main.cc  main.cpp  opencv安装说明  readme.txt  server.c
httpserver/: CMakeCache.txt  Makefile  SMSsending.c  SMSsending.h  cmake_install.cmake  face_only_rpi.cpp
